fixed some layout issues, working error message, reloads messages with AJAX after tweet submit

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -44,21 +44,21 @@ main {
 article {
   background-color: white;
   width: 90%;
-  margin: 0 auto;
+  margin: 1em auto;
   padding: 1em;
   border: 4px solid;
   
 }
 
-/* .username {
-  visibility: hidden;
-} */
-
-.username:hover {
-  color: green;
-  /* visibility: visible; */
-} 
-
 article:hover {
   filter: drop-shadow(4px 4px 4px black)
+ 
 }
+
+.username {
+  visibility: hidden;
+}
+
+article:hover > div > .username {
+  visibility: visible;
+} 
